2003-05-20	Gaius Mulley <gaius@glam.ac.uk>

	* fixed bug reported by Iztok Kobal (gm2/m2/comp/autotest/gm2/testlength3.mod)
	  LENGTH is now mapped onto M2RTS.Length if the parameter is not a constant
	  at compile time.

2003-05-16	Gaius Mulley <gaius@glam.ac.uk>

	* fixed bug reported by Iztok Kobal (gm2/m2/comp/autotest/gm2/longstrimp.mod)
	  and also (gm2/m2/comp/autotest/gm2/imp[deghij].mod)
	
2003-05-08	Gaius Mulley <gaius@glam.ac.uk>

	* implemented the standard function LENGTH
	* allowed standard functions to be called from constant expressions
	* improved cyclic dependancy errors
	* SIZE is now only exported from SYSTEM if the switch -Wiso is absent
	  SIZE is declared as a standard procedure if -Wiso is present

2003-05-07	Gaius Mulley <gaius@glam.ac.uk>

	* implemented ISO BITSET as a standard type which takes effect when -Wiso
	  is present on the command line.
	* backed out garbage collection change to m2.lex
	* fixed bugs reported by Iztok Kobal
	  (gm2/m2/comp/autotest/gm2/[testexit.mod, bitset3.mod bits32.mod])

2003-05-06	Gaius Mulley <gaius@glam.ac.uk>

	* modified Storage and SysStorage modules so that the procedure
	  DEALLOCATE assigns the pointer to NIL
	* fixed bug reported by Iztok Kobal (gm2/m2/comp/autotest/gm2/bitset2.mod)

2003-05-05	Gaius Mulley <gaius@glam.ac.uk>

	* fixed two bugs reported by Iztok Kobal.
	* fixed bug in M2GCCDeclare.mod (BITSET's subrange was undeclared).
	* added BITNUM, the subrange from which BITSET is constructed, in SYSTEM.
	* added regression test case for this bug.
	* also modified c.lex to use xstrdup and not strdup.

2003-05-01	Gaius Mulley <gaius@glam.ac.uk>

	* added pseudo functions, CAP, ODD, ABS
	* removed gm2-libs/Math.def which defined ABS

2003-04-29	Gaius Mulley <gaius@glam.ac.uk>

	* examples/pthreads cleaned up
	* introduced ISO SYSTEM. Limitations, TSIZE only takes one parameter,
	  and SHIFT, ROTATE are not implemented yet
	* renamed gm2-libs/Strings to gm2-libs/DynamicStrings to avoid name